--- a/tinyMediaManager/locale/messages_de.properties
+++ b/tinyMediaManager/locale/messages_de.properties
@@ -1,4 +1,3 @@
-# Buttons
 Button.ok=Ok
 Button.cancel=Abbrechen
 Button.add=Hinzufügen
@@ -39,10 +38,13 @@ tmm.cleardatabase.info=Datenbank initialisiert. Bitte tinyMediaManager neu start
 tmm.cleardatabase.error=Ein Fehler ist beim initialisieren aufgetreten. Bitte die Datei 'tmm.odb' selbst löschen.
 tmm.gotoinstalldir=TMM Verzeichnis im Dateibrowser öffnen
 tmm.debug=Debug
+tmm.tools=Tools
 tmm.about=Über
+tmm.contact=Kontaktiere uns
 tmm.donate=Spenden
 tmm.searchfield=Suchen...
 tmm.errorlogs=Zeige Fehlerbericht
+tmm.wakeonlandevice=Wake on LAN Gerät
 
 status.activethreads=laufende Aufgaben
 status.queuesize=Warteschlange\:
@@ -51,7 +53,8 @@ status.queuesize=Warteschlange\:
 onlyoneoperation=Nur eine Funktion zur gleichen Zeit darf ausgeführt werden
 update.datasource=Filmverzeichnis neu einlesen
 update.datasource.unavailable=Datenordner {} nicht verfügbar - überspringe
-update.datasource.movieinroot=Datei '{}' im Hauptverzeichnis gefunden. Das wird NICHT unterstützt (bitte Film ein ein eigenes Verzeichnis verschieben, um ihn zu importieren\!)
+update.datasource.movieinroot=Datei '{}' liegt in einem Verzeichnis mit mehreren Filmen. Um diesen Film zu importieren, bitte die 'erlaube mehrere Filme in einem Verzeichnis' Funktion einschalten (lese den Hinweis sorgfältig\!)
+update.datasource.episodeinroot=Datei '{}' im Hauptverzeichnis gefunden. Das wird NICHT unterstützt (bitte die Datei in ein eigenes Verzeichnis verschieben, um sie zu importieren\\\!)
 export.detail=Vorlage beinhaltet Film Detailseiten
 export.setdestination=Verzeichnis auswählen
 export.selectdirectory=Wähle Verzeichnis für den Export
@@ -72,6 +75,7 @@ movie.updatemediainfo=Medianinformationen aus ausgewählten Filmen neu einlesen
 movie.bulkedit=Mehrfach bearbeiten
 movie.bulkedit.desc=Ändere Genres, Markierungen, Film Sets und gesehen/ungesehen für alle selektierten Filme
 movie.rewritenfo=NFO für ausgewählte Filme neu schreiben
+movie.clearimagecache=Den Bildercache für ausgewählte Filme löschen
 
 movie.export=Exportiere Filmliste(n) von selektierten Filmen
 
@@ -176,6 +180,7 @@ Settings.images=<html><center>Film -<br>Bilder</center></html>
 Settings.tvshow=TV Shows
 Settings.tvshowscraper=<html><center>Tv Shows -<br>Scraper</center></html>
 Settings.general=Allgemein
+Settings.externaldevices=<html>externe<br>Geräte</html>
 
 # general settings
 Settings.proxy=Proxy Einstellungen
@@ -224,6 +229,8 @@ Settings.movie.datasource.remove.info=Wenn du %s von den Datenordnern entfernst,
 Settings.datasource.folderchooser=Film Verzeichnis hinzufügen
 Settings.datasource.remove=Film Verzeichnis entfernen
 
+Settings.multipleMovies=erlaube mehrere Filme in einem Verzeichnis
+Settings.multipleMovies.hint=ACHTUNG\: diese Option erlaubt Dir, mehrere Filme in einem Verzeichnis zu importieren.\nDiese Option bringt allerdings einige Nachteile mit sich\: \nDu kannst keine Namenskonvention bei diesen Filmen verwenden,\nund Extrafanarts/Thums/Artworks funktionieren dafür auch nicht.\nMEHRERE FILME IN EINEM VERZEICHNIS WIRD GENERELL NICHT EMPFOHLEN\!
 Settings.nfoFormat=NFO Format
 Settings.nofFileNaming=NFO Dateiname
 Settings.videofiletypes=Film Dateierweiterungen
@@ -237,8 +244,12 @@ Settings.renamer.file=Dateiname
 Settings.cleanupoptions=Cleanup Optionen
 Settings.renamer.removenfo=alle anderen NFOs entfernen
 Settings.example=Beispiel
+Settings.imagecacheimport=Bildercache beim Import aufbauen
+Settings.imagecacheimporthint=Achtung\: das Aufbauen des Caches könnte eine Weile dauern
+Settings.devicename=Gerätename
+Settings.macaddress=MAC Adresse
 
-Settings.movie.renamer.info=Verfügbare Werte\n$T \= Titel\n$O \= Original Titel\n$1 \= Erster Buchstabe des Titels\n$E \= Titel sortiert\n$2 \= Erster Buchstabe des sortierten Titels\n$Y \= Jahr\n$M \= Filmset Titel (sortiert)\n$N \= Filmset Titel\n$I \= IMDB Nummer\n$R \= Video Auflösung\n$A \= Audio Codec + Kanäle\n$V \= Video Codec + Format
+Settings.movie.renamer.info=Verfügbare Werte\n$T \= Titel\n$O \= Original Titel\n$1 \= Erster Buchstabe des Titels\n$E \= Titel sortiert\n$2 \= Erster Buchstabe des sortierten Titels\n$Y \= Jahr\n$M \= Filmset Titel (sortiert)\n$N \= Filmset Titel\n$I \= IMDB Nummer\n$C \= Altersbeschränkung\n$R \= Video Auflösung\n$A \= Audio Codec + Kanäle\n$V \= Video Codec + Format
 Settings.movie.renamer.example=Wähle die Namensvorlage für Dateien und Ordner.\nWenn leer, wird das Umbenennen übersprungen.
 Settings.movie.renamer.nomovie=brauche wenigstens einen (gescrapten) Film für die Vorschau
 Settings.movie.renamer.spacesubstitution=Leerzeichen ersetzen durch
@@ -268,6 +279,7 @@ tvshow.scrapeepisodeseasondata=Saison & Episoden Metadaten scrapen
 tvshow.update=ausgewählte TV Show(s) updaten
 tvshow.rewritenfo=NFO für ausgewählte TV Show(s) neu schreiben
 tvshow.rename=Umbenennen / Cleanup ausgewählter TV Shows / Episoden
+tvshow.clearimagecache=Den Bildercache für ausgewählte Serien/Episoden löschen
 
 tvshowepisode.scrape=Scrape Episoden Metadaten
 tvshowepisode.clone=Episode kopieren
@@ -415,6 +427,9 @@ message.movie.searcherror=Fehler beim Suchen {} {}
 message.erroropenfile=Konnte Datei {} nicht öffnen {}
 message.erroropenfolder=Konnte Ordner {} nicht öffnen {}
 message.erroropenurl=Konnte URL {} nicht öffnen {}
+
+message.missingitems=Bitte alle benötigten Felder befüllen
+message.invalidmac=Ungültige MAC Adresse. Die MAC Adresse muss folgendes Format haben\: AA\:BB\:CC\:DD\:EE\:FF
 
 tree.collapseall=Alle Knoten zusammenklappen
 tree.expandall=Alle Knoten aufklappen
