--- a/tinyMediaManager/locale/messages_nl.properties
+++ b/tinyMediaManager/locale/messages_nl.properties
@@ -1,4 +1,3 @@
-# Buttons
 Button.ok=Ok
 Button.cancel=Annuleer
 Button.add=Toevoegen
@@ -33,16 +32,19 @@ tmm.exit.confirmation=Bevestiging voor afsluiten
 tmm.cache=Cache
 tmm.clearurlcache=Wis url cache
 tmm.clearimagecache=wis afbeelding cache
-tmm.rebuildimagecache=Herbouw image cache
+tmm.rebuildimagecache=Hercreëer afbeelding cache
 tmm.cleardatabase=Database initialiseren
 tmm.cleardatabase.info=Database geïnitialiseerd. Herstart tinyMediaManager.
 tmm.cleardatabase.error=Database initialisatie veroorzaakte een fout. Verwijder bestand tmm.odb handmatig
 tmm.gotoinstalldir=Open tMM installatie map in verkenner
 tmm.debug=Debug
+tmm.tools=Tools
 tmm.about=Over
+tmm.contact=Neem contact op
 tmm.donate=Doneren
 tmm.searchfield=Zoeken...
 tmm.errorlogs=Toon fout log
+tmm.wakeonlandevice=Wake on LAN apparaat
 
 status.activethreads=actieve processen
 status.queuesize=Wachtlijst\:
@@ -51,7 +53,8 @@ status.queuesize=Wachtlijst\:
 onlyoneoperation=Maar één proces tegelijk toegestaan
 update.datasource=Bronnen bijwerken
 update.datasource.unavailable=Databron {} niet beschikbaar - overslaan
-update.datasource.movieinroot=Bestand '{}' in databron gevonden - dit wordt niet ondersteund (plaats in aparte map om dit te kunnen importeren\!)
+update.datasource.movieinroot=Bestand '{}' is gevonden in een map met meerdere films. Om deze toch te importeren moet u 'Sta meerdere films per map toe' activeren in film instellingen (zorgvuldig lezen\!)
+update.datasource.episodeinroot=Bestand '{}' is gevonden in de root directory van de databron. Verplaats het bestand naar een eigen map om te importeren. 
 export.detail=Template bevat detail pagina's
 export.setdestination=Stel export doel in
 export.selectdirectory=Selecteer export map
@@ -72,6 +75,7 @@ movie.updatemediainfo=Media informatie van geselecteerde film(s) bijwerken
 movie.bulkedit=Bulk bewerken
 movie.bulkedit.desc=Wijzig genres, tags, filmset en bekeken indicator voor geselecteerde films
 movie.rewritenfo=Herschrijf NFO voor geselecteerde film(s)
+movie.clearimagecache=Wis afbeelding cache voor geselecteerde film(s)
 
 movie.export=Geselecteerd film(s) exporteren
 
@@ -176,6 +180,7 @@ Settings.images=<html><center>Film -<br>Afbeeldingen</center></html>
 Settings.tvshow=TV Shows
 Settings.tvshowscraper=<html><center>Tv Show -<br>Scraper</center></html>
 Settings.general=Algemeen
+Settings.externaldevices=<html>Externe<br>apparaten</html>
 
 # general settings
 Settings.proxy=Proxy instellingen
@@ -187,7 +192,7 @@ Settings.clearhttpcache=Wis HTTP cache bij afsluiten
 Settings.cache=Cache
 Settings.imagecache=Activeer afbeelding cache
 Settings.imagecachetype=Afbeelding cache type
-Settings.imagecachebackground=Herbouw afbeelding cache automatisch in achtergrond
+Settings.imagecachebackground=Hercreëer afbeelding cache automatisch in achtergrond
 Settings.loglevel=Loglevel
 Settings.language=UI Taal
 Settings.languagehint=De taal zal veranderen na herstart
@@ -224,6 +229,8 @@ Settings.movie.datasource.remove.info=Als je %s van de databronnen verwijderd wo
 Settings.datasource.folderchooser=Bron toevoegen
 Settings.datasource.remove=Databron verwijderen
 
+Settings.multipleMovies=Sta meerdere films per map toe
+Settings.multipleMovies.hint=VOORZICHTIG\: deze optie laat je meerdere films per map importeren.\nActivering heeft de volgende nadelen\: Je kunt niet langer specifieke\nbestandsnamen of extrafanart/extrathumbs kiezen.\nGEBRUIK VAN MEERDERE FILMS IN ÉÉN MAP IS NIET AANBEVOLEN\!
 Settings.nfoFormat=NFO format
 Settings.nofFileNaming=NFO bestandsbenaming
 Settings.videofiletypes=Video bestandtypes
@@ -237,8 +244,12 @@ Settings.renamer.file=Bestandsnaam
 Settings.cleanupoptions=Opschoon opties
 Settings.renamer.removenfo=wis alle andere NFO's
 Settings.example=Voorbeeld
+Settings.imagecacheimport=Creëer afbeelding cache tijdens import 
+Settings.imagecacheimporthint=Attentie\: dit neemt enige tijd in beslag en werkt alleen als afbeelding cache is geactiveerd
+Settings.devicename=Apparaat naam
+Settings.macaddress=MAC adres
 
-Settings.movie.renamer.info=Beschikbare methodes\:\n$T \= Titel\n$O \= Originele titel\n$1 \= Eerste letter van titel\n$E \= Sorteer titel\n$2 \= Eerste letter van Sorteer titel\n$Y \= Jaar\n$M \= Filmset titel (sorteer titel)\n$N \= Filmset titel\n$I \= IMDB nummer\n$R \= Video resolutie\n$A \= Audio code + kanalen\n$V \= Video code + formaat
+Settings.movie.renamer.info=Beschikbare methodes\:\n$T \= Titel\n$O \= Originele titel\n$1 \= Eerste letter van titel\n$E \= Sorteer titel\n$2 \= Eerste letter van Sorteer titel\n$Y \= Jaar\n$M \= Filmset titel (sorteer titel)\n$N \= Filmset titel\n$I \= IMDB nummer\n$C \= Certificering\n$R \= Video resolutie\n$A \= Audio code + kanalen\n$V \= Video code + formaat
 Settings.movie.renamer.example=Kies een hernoem patroon voor de map en bestand \nHernoemen wordt overgeslagen bij lege velden\!
 Settings.movie.renamer.nomovie=tenmiste één film is nodig voor het voorbeeld
 Settings.movie.renamer.spacesubstitution=Vervang spaties door
@@ -268,6 +279,7 @@ tvshow.scrapeepisodeseasondata=Scrape seizoen & aflevering data
 tvshow.update=Update geselecteerde TV serie(s)
 tvshow.rewritenfo=Herschrijf NFO voor geselecteerde TV serie(s)
 tvshow.rename=Geselecteerde TV serie(s)/aflevering(en) hernoemen/opschonen
+tvshow.clearimagecache=Wis afbeelding cache voor geselecteerde TV serie(s)/aflevering(en)
 
 tvshowepisode.scrape=Metadata aflevering scrapen
 tvshowepisode.clone=Dupliceer aflevering
@@ -415,6 +427,9 @@ message.movie.searcherror=Zoek film mislukt{} {}
 message.erroropenfile=Kan file niet openen{} {}
 message.erroropenfolder=Kan map niet openen{} {}
 message.erroropenurl=Kan URL niet openen {} {}
+
+message.missingitems=Vul alle benodigde velden in a.u.b.
+message.invalidmac=Ongeldig MAC adres. Het moet de het volgende formaat hebben\: AA\:BB\:CC\:DD\:EE\:FF
 
 tree.collapseall=Alles samenvouwen
 tree.expandall=Alles uitvouwen
