--- a/tinyMediaManager/locale/messages_pt.properties
+++ b/tinyMediaManager/locale/messages_pt.properties
@@ -1,4 +1,3 @@
-# Buttons
 Button.ok=Ok
 Button.cancel=Cancelar
 Button.add=Adicionar
@@ -34,15 +33,18 @@ tmm.cache=Cache
 tmm.clearurlcache=limpar cache de url
 tmm.clearimagecache=limpar cache de imagem
 tmm.rebuildimagecache=reconstruir cache de imagem
-tmm.cleardatabase=inicializar base de dados
+tmm.cleardatabase=Inicializar base de dados
 tmm.cleardatabase.info=Base de dados inicializada. Por favor reinicie o tinyMediaManager
 tmm.cleardatabase.error=Um erro ocorreu na inicialização da base de dados. Por favor apague o arquivo tmm.odb manualmente
 tmm.gotoinstalldir=Abrir diretório do tMM no gerenciador de arquivos
 tmm.debug=Depurar
+# tmm.tools=Tools
 tmm.about=Sobre
+# tmm.contact=Contact us
 tmm.donate=Doar
 tmm.searchfield=Buscar...
 tmm.errorlogs=Mostrar log de erros
+tmm.wakeonlandevice=Dispositivo Wake on LAN
 
 status.activethreads=processos ativos
 status.queuesize=Fila\:
@@ -51,7 +53,8 @@ status.queuesize=Fila\:
 onlyoneoperation=Somente uma operação por vez é permitda
 update.datasource=Atualizar fontes
 update.datasource.unavailable=Fonte {}{} não disponível - pulando
-# update.datasource.movieinroot=Found file '{}' in datasource root - this is NOT supported (move to separate folder to get this imported\!)
+update.datasource.movieinroot=Encontrado arquivo '{}' em um diretório contendo mais de um filme. Para ser importado, por favor ative a função 'Permitir importar múltiplos filmes por diretório' nas configurações (leia com atenção\!)
+update.datasource.episodeinroot=Encontrado arquivo '{}' na raiz do diretório de origem. Para importar, mova para o seu próprio diretório\!
 export.detail=Modelo contém detalhes
 export.setdestination=Definir destino de exportação
 export.selectdirectory=selecionar diretório de exportação
@@ -72,6 +75,7 @@ movie.updatemediainfo=Atualizar informação de mídia do(s) filme(s) selecionad
 movie.bulkedit=Edição em lote
 movie.bulkedit.desc=Alterar gênero, etiquetas, coleção e indicador de assistido para os filmes selecionados
 movie.rewritenfo=Reescrever NFO p/ filme(s) selecionado(s)
+movie.clearimagecache=Limpar imagem de cache do(s) filme(s) selecionado(s)
 
 movie.export=Exportar filme(s) selecionado(s)
 
@@ -176,6 +180,7 @@ Settings.images=<html><center>Filmes -<br>Imagens</center></html>
 Settings.tvshow=Programa de Tv
 Settings.tvshowscraper=<html><center>Programas de Tv-<br>Scraper</center></html>
 Settings.general=Geral
+Settings.externaldevices=<html>Dispositivos<br>externos</html>
 
 # general settings
 Settings.proxy=Configurações de Proxy
@@ -219,11 +224,13 @@ Settings.default.autoscrape=buscar imagens automaticamente (sem seleção)
 
 # movie settings
 Settings.movie.datasource=Fontes
-# Settings.movie.datasource.remove.info=If you remove %s from your datasources, all movies inside this path will be removed from the database. Continue?
+Settings.movie.datasource.remove.info=Se você remover %s da sua origem de dados, todos os filmes neste caminho também serão removidos. Continuar?
 
 Settings.datasource.folderchooser=Adicionar fonte
 Settings.datasource.remove=Remover fonte de dados
 
+Settings.multipleMovies=Permitir múltiplos filmes por diretório
+Settings.multipleMovies.hint=ATENÇÃO\: esta opção permitirá importar múltiplos filmes por diretório.\nHabilitar pode causar efeitos colaterais\: você não será mais capaz de\nescolher nenhum tipo de nomenclatura específica para extrafanart/extrathumbs.\nUSAR MÚLTIPLOS FILMES POR DIRETÓRIO NÃO É RECOMENDADO\!
 Settings.nfoFormat=formato NFO
 Settings.nofFileNaming=Nome NFO
 Settings.videofiletypes=Tipos de vídeo
@@ -237,11 +244,15 @@ Settings.renamer.file=Nome arquivo
 Settings.cleanupoptions=Opções de limpeza
 Settings.renamer.removenfo=remover todos NFOs
 Settings.example=Exemplo
+Settings.imagecacheimport=Criar cache de imagem na importação
+Settings.imagecacheimporthint=Atenção\: isto pode demorar. Funciona somente se o cache de imagem estiver habilitado
+Settings.devicename=Nome do dispositivo
+Settings.macaddress=MAC address
 
-Settings.movie.renamer.info=Padrão disponível\:\n$T \= Título\n$O \= Título Original\n$1 \= primeira letra do título\n$E \= Título de Lista\n$2 \= primeira letra do título de lista\n$Y \= Ano\n$M \= Título da coleção (de Lista)\n$N \= Título da coleção\n$I \= número IMDB\n$R \= Resolução\n$A \= codec audio + canais\n$V \= codec video + formato
+# Settings.movie.renamer.info=Available pattern\:\r\n$T \= Title\r\n$O \= OriginalTitle\r\n$1 \= first letter of the title\r\n$E \= Sort title\r\n$2 \= first letter of sort title\r\n$Y \= Year\r\n$M \= Movieset title (sort title)\r\n$N \= Movieset title\r\n$I \= IMDB number\r\n$C \= Certification\r\n$R \= Video resolution\r\n$A \= audio code + channels\r\n$V \= video code + format
 Settings.movie.renamer.example=Escolha um arquivo e padrão p/ renomear\nSe o campo estiver em branco, não serão renomeados
 Settings.movie.renamer.nomovie=pelo menos um filme é necessário como exemplo
-# Settings.movie.renamer.spacesubstitution=Replace spaces with
+Settings.movie.renamer.spacesubstitution=Substituir espaços por
 
 Settings.tvshow.renamer.info=A Fazer
 Settings.tvshow.renamer.example=A Fazer
@@ -249,7 +260,7 @@ Settings.tvshow.renamer.example=A Fazer
 # tv show settings
 Settings.tvshowdatasource=Fonte de programa de Tv
 Settings.tvshowdatasource.folderchooser=Adicionar fonte de programa de Tv
-# Settings.tvshowdatasource.remove.info=If you remove %s from your datasources, all TV shows and episodes inside this path will be removed from the database. Continue?
+Settings.tvshowdatasource.remove.info=Se você remover %s da sua origem de dados, todos os Programas de TV e episódios neste caminho também serão removidos. Continuar?
 
 # tv shows
 tvshow.scrape.newitems=Buscar novos itens
@@ -265,9 +276,10 @@ tvshow.change=Alterar programa de TV
 tvshow.bulkedit=Edição em lote
 tvshow.bulkedit.desc=Alterar gênero, etiquetas dos programas selecionados e/ou flag assistido e temporada dos episódios.
 tvshow.scrapeepisodeseasondata=Buscar temporada e episódio
-# tvshow.update=Update selected TV show(s)
+tvshow.update=Atualizar o(s) Programa(s) de TV selecionado(s)
 tvshow.rewritenfo=Reescrever NFO p/ Programa(s) de Tv selecionado(s)
 tvshow.rename=Renomear/limpar programa(s) de TV selecionado(s)
+tvshow.clearimagecache=Limpar cache de imagem para o(s) Programa(s) de TV/Episódio(s) selecionado(s)
 
 tvshowepisode.scrape=Pesquisar dados do episódio
 tvshowepisode.clone=Duplicar episódio
@@ -416,54 +428,57 @@ message.erroropenfile=Impossível abrir arquivo{}{}
 message.erroropenfolder=Impossível abrir diretório{}{}
 message.erroropenurl=Impossível abrir URL{}{}
 
-# tree.collapseall=Collapse all nodes
-# tree.expandall=Expand all nodes
+message.missingitems=Por favor preencha todos os campos
+message.invalidmac=MAC address inválido. Deve ser inserido no seguinte formato\: AA\:BB\:CC\:DD\:EE\:FF
+
+tree.collapseall=Fechar todos
+tree.expandall=Expandir todos
 
 ########################
 # All our genres
 # these keys are not used (just here for translation)
 # if we got the localized values, add them to the MediaGenres class (with xx- locale prefix)
 # (since we might need to parse all languages, not just ours)
-# Genres.ACTION = Action
-# Genres.ADVENTURE = Adventure
-# Genres.ANIMATION = Animation
-# Genres.ANIMAL = Animal
-# Genres.BIOGRAPHY = Biography
-# Genres.COMEDY = Comedy
-# Genres.CRIME = Crime
-# Genres.DISASTER = Disaster
-# Genres.DOCUMENTARY = Documentary
-# Genres.DRAMA = Drama
-# Genres.EASTERN = Eastern
-# Genres.EROTIC = Erotic
-# Genres.FAMILY = Family
-# Genres.FAN_FILM = Fan Film
-# Genres.FANTASY = Fantasy
-# Genres.FILM_NOIR = Film Noir
-# Genres.FOREIGN = Foreign
-# Genres.GAME_SHOW = Game Show
-# Genres.HISTORY = History
-# Genres.HOLIDAY = Holiday
-# Genres.HORROR = Horror
-# Genres.INDIE = Indie
-# Genres.MUSIC = Music
-# Genres.MUSICAL = Musical
-# Genres.MYSTERY = Mystery
-# Genres.NEO_NOIR = Neo Noir
-# Genres.NEWS = News
-# Genres.REALITY_TV = Reality TV
-# Genres.ROAD_MOVIE = Road Movie
-# Genres.ROMANCE = Romance
-# Genres.SCIENCE_FICTION = Science Fiction
-# Genres.SERIES = Series
-# Genres.SHORT = Short
-# Genres.SILENT_MOVIE = Silent Movie
-# Genres.SPORT = Sport
-# Genres.SPORTING_EVENT = Sports Event
-# Genres.SPORTS_FILM = Sports Film
-# Genres.SUSPENSE = Suspense
-# Genres.TALK_SHOW = Talk Show
-# Genres.TV_MOVIE = TV Movie
-# Genres.THRILLER = Thriller
-# Genres.WAR = War
-# Genres.WESTERN = Western
+Genres.ACTION = Ação
+Genres.ADVENTURE = Aventura
+Genres.ANIMATION = Desenhos
+Genres.ANIMAL = Animais
+Genres.BIOGRAPHY = Biografia
+Genres.COMEDY = Comédia
+Genres.CRIME = Policial
+Genres.DISASTER = Tragédias
+Genres.DOCUMENTARY = Documentário
+Genres.DRAMA = Drama
+Genres.EASTERN = Velho Oeste
+Genres.EROTIC = Erótico
+Genres.FAMILY = Família
+Genres.FAN_FILM = Fan Film
+Genres.FANTASY = Fantasia
+Genres.FILM_NOIR = Cult
+Genres.FOREIGN = Estrangeiro
+Genres.GAME_SHOW = Game show
+Genres.HISTORY = História
+Genres.HOLIDAY = Férias
+Genres.HORROR = Terror
+Genres.INDIE = Indie
+Genres.MUSIC = Música
+Genres.MUSICAL = Musical
+Genres.MYSTERY = Mistério
+Genres.NEO_NOIR = Neo Cult
+Genres.NEWS = Notícias
+Genres.REALITY_TV = Reality Show
+Genres.ROAD_MOVIE = Road Movie
+Genres.ROMANCE = Romance
+Genres.SCIENCE_FICTION = Ficção Científica
+Genres.SERIES = Séries
+Genres.SHORT = Curtas
+Genres.SILENT_MOVIE = Filme Mudo
+Genres.SPORT = Esportes
+Genres.SPORTING_EVENT = Eventos Esportivos
+Genres.SPORTS_FILM = Filme Esportivo
+Genres.SUSPENSE = Suspense
+Genres.TALK_SHOW = Programa de Tv
+Genres.TV_MOVIE = Filme
+Genres.THRILLER = Thriller
+Genres.WAR = Guerra
+Genres.WESTERN = Velho Oeste
