--- a/tinyMediaManager/locale/messages_sk.properties
+++ b/tinyMediaManager/locale/messages_sk.properties
@@ -1,4 +1,3 @@
-# Buttons
 Button.ok=Ok
 Button.cancel=Zrušiť
 Button.add=Pridať
@@ -39,10 +38,13 @@ tmm.cleardatabase.info=Databáza inicializovaná. Prosím reštartujte tinyMedia
 tmm.cleardatabase.error=Pri inicializácii databázy došlo k chybe. Prosím vymažte súbor tmm.odb ručne.
 tmm.gotoinstalldir=Otvoriť inštalačný adresár tMM v prehliadaši súborov
 tmm.debug=Ladenie / Debug
+tmm.tools=Nástroje
 tmm.about=O programe
+tmm.contact=Kontakt
 tmm.donate=Prispieť
 tmm.searchfield=Hľadať...
 tmm.errorlogs=Zobraziť protokol chýb
+# tmm.wakeonlandevice=Wake on LAN device
 
 status.activethreads=aktívne vlákna
 status.queuesize=Front\:
@@ -51,7 +53,8 @@ status.queuesize=Front\:
 onlyoneoperation=V jednom okamihu Je povolená iba jedna operácia
 update.datasource=Aktualizovať zdroje dát
 update.datasource.unavailable=Zdroj dát {} nie je dostupný - preskakujem
-update.datasource.movieinroot=Nájdený súbor '{}' v koreni zdroja dát - Toto nie je podporované (pre importovanie presuňte súbor do samostatnej zložky\!)
+update.datasource.movieinroot=Nájdený súbor '{}' v adresári, ktorý obsahuje viac ako jeden film. Pre importovanie prosím aktivujte funkciu 'Povoliť viac filmov v jednom priečinku' v nastavení filmov (čítajte pozorne)
+update.datasource.episodeinroot=Nájdený súbor '{}' v hlavnom adresári zdroja dát. Pre importovanie ho presuňte do vlastného priečinku.
 export.detail=Šablóna obsahuje stránky podrobností
 export.setdestination=Nastaviť cieľový priečinok exportu
 export.selectdirectory=Vyberte cieľový priečinok exportu
@@ -72,6 +75,7 @@ movie.updatemediainfo=Aktualizovať informácie o médiu označených filmov
 movie.bulkedit=Hromadná úprava
 movie.bulkedit.desc=Zmeniť žánre, značky, kolekcie a označenie 'Videné' pre všetky označené filmy
 movie.rewritenfo=Prepísať NFO označených filmov
+movie.clearimagecache=Vyčistiť medzi-pamäť obrázkov pre označené filmy
 
 movie.export=Exportovať označené filmy
 
@@ -176,6 +180,7 @@ Settings.images=<html><center>Filmy -<br>Obrázky</center></html>
 Settings.tvshow=Seriály
 Settings.tvshowscraper=<html><center>Seriály -<br>Scraper</center></html>
 Settings.general=Všeobecné
+Settings.externaldevices=<html>Externé<br>zariadenia</html>
 
 # general settings
 Settings.proxy=Nastavenia roxy
@@ -224,6 +229,8 @@ Settings.movie.datasource.remove.info=Pokiaľ odstránite %s z vašich zdrojov d
 Settings.datasource.folderchooser=Pridať zdroj dát
 Settings.datasource.remove=Odstrániť zdroj dát
 
+Settings.multipleMovies=Povoliť viac filmov v jednom priečinku
+# Settings.multipleMovies.hint=BE AWARE\: this option will allow you to import multiple movies per folder.\nEnabling this will cause some side effects\: you are no longer be able to\nchoose any specific file naming or use extrafanart/extrathumbs.\nUSING MULTIPLE MOVIES PER FOLDER IS NOT RECOMMENDED\!
 Settings.nfoFormat=Formát NFO
 Settings.nofFileNaming=Pomenovanie súboru NFO
 Settings.videofiletypes=Video typy súborov
@@ -237,8 +244,12 @@ Settings.renamer.file=Názov súboru
 Settings.cleanupoptions=Nastavenia čistenia
 Settings.renamer.removenfo=Odstrániť všetky ostatné NFO
 Settings.example=Príklad
+# Settings.imagecacheimport=Build image cache on import
+Settings.imagecacheimporthint=Pozor\: táto operácia môže chvíľu trvať. Funguje len vtedy, ak je povolená medzipamäť obrázkov
+Settings.devicename=Názov zariadenia
+Settings.macaddress=MAC adresa
 
-Settings.movie.renamer.info=Dostupné vzorce\n$T \= Názov\n$O \= Pôvodný názov\n$1 \= Prvé písmeno názvu\n$E \= Názov pre usporiadanie\n$2 \= Prvé písmeno názvu pre usporiadanie\n$Y \= Rok\n$M \= Názov kolekcie filmov (názov pre usporiadanie)\n$N \= Názov kolekcie filmov\n$I \= IMDB číslo\n$R \= Rozlíšenie videa\n$A \= audio kódovanie + kanály\n$V \= video kódovanie + formát
+Settings.movie.renamer.info=Dostupné vzorce\n$T \= Názov\n$O \= Pôvodný názov\n$1 \= Prvé písmeno názvu\n$E \= Názov pre usporiadanie\n$2 \= Prvé písmeno názvu pre usporiadanie\n$Y \= Rok\n$M \= Názov kolekcie filmov (názov pre usporiadanie)\n$N \= Názov kolekcie filmov\n$I \= IMDB číslo\n$C \= Certifikát\n$R \= Rozlíšenie videa\n$A \= audio kódovanie + kanály\n$V \= video kódovanie + formát
 Settings.movie.renamer.example=Vyberte vzor pre premenovanie priečinku a súboru.\nAk sú polia prázdne, premenovanie bude preskočené\!
 Settings.movie.renamer.nomovie=pre príklad Je potrebný aspoň jeden film
 Settings.movie.renamer.spacesubstitution=Miesto medzery použiť
@@ -268,6 +279,7 @@ tvshow.scrapeepisodeseasondata=Stiahni informácie o sezóne a epizóde
 tvshow.update=Aktualizovať označené seriály
 tvshow.rewritenfo=Prepísať NFO označených seriálov
 tvshow.rename=Premenovať/vyčistiť označené seriály/epizódy
+tvshow.clearimagecache=Vyčistiť medzipamäť obrázkov pre označené seriály/epizódy
 
 tvshowepisode.scrape=Stiahni metadáta epizódy
 tvshowepisode.clone=klonovať epizódu
@@ -415,6 +427,9 @@ message.movie.searcherror=Vyhľadanie filmu zlyhalo{} {}
 message.erroropenfile=Súbor sa nedá otvoriť{} {}
 message.erroropenfolder=Priečinok sa nedá otvoriť{} {}
 message.erroropenurl=URL sa nedá otvoriť{} {}
+
+message.missingitems=Prosím vás vyplňte všetky požadované polia
+message.invalidmac=Neplatná MAC adresa. Adresa Musí byť  v tvare AA\:BB\:CC\:DD\:EE\:FF
 
 tree.collapseall=Zbaliť všetky uzly
 tree.expandall=Robaliť všetky uzly
