added detailed message when file already exists (TV show renamer) added check for episode/season == -1 (TV show renamer)

--- a/tinyMediaManager/src/messages.properties
+++ b/tinyMediaManager/src/messages.properties
@@ -280,6 +280,7 @@ tvshow.update=Update selected TV show(s)
 tvshow.rewritenfo=Rewrite NFO for selected TV show(s)
 tvshow.rename=Rename/cleanup selected TV show(s)/episode(s)
 tvshow.clearimagecache=Clear image cache for selected TV show(s)/episode(s)
+tvshow.renamer.failedrename=Failed to rename episode {} - invalid season and/or episode number
 
 tvshowepisode.scrape=Scrape episode metadata
 tvshowepisode.clone=Clone episode
