feature: added movie renamer option to suppress movieset folder creation for moviesets with a single movie in it

--- a/tinyMediaManager/src/messages.properties
+++ b/tinyMediaManager/src/messages.properties
@@ -243,6 +243,7 @@ Settings.renamer.folder=Folder name
 Settings.renamer.file=File name
 Settings.cleanupoptions=Cleanup options
 Settings.renamer.removenfo=remove all other NFOs
+Settings.renamer.moviesetsinglemovie=Also create movieset folder for moviesets with only one movie
 Settings.example=Example
 Settings.imagecacheimport=Build image cache on import
 Settings.imagecacheimporthint=Attention: this may take a while. Works only if the image cache is enabled
