added extra warning before clearing the database

--- a/tinyMediaManager/src/messages.properties
+++ b/tinyMediaManager/src/messages.properties
@@ -34,6 +34,7 @@ tmm.clearurlcache=clear url cache
 tmm.clearimagecache=clear image cache
 tmm.rebuildimagecache=rebuild image cache
 tmm.cleardatabase=initialize database
+tmm.cleardatabase.hint=Be careful: this will remove the complete database to start with a new one. Proceed?
 tmm.cleardatabase.info=Database initialized. Please restart tinyMediaManager
 tmm.cleardatabase.error=An error occured on database init. Please delete the file tmm.odb manually
 tmm.gotoinstalldir=Open tMM install directory in a file browser 
