Better explanation in error log why we are not taking a result

--- a/tinyMediaManager/src/messages.properties
+++ b/tinyMediaManager/src/messages.properties
@@ -70,6 +70,8 @@ movie.scrape.unscraped.desc=Search & scrape all unscraped movie(s) without user 
 movie.scrape.metadata=Scrape metadata for selected movie(s)
 movie.scrape.metadata.desc=Scrape metadata for selected movie(s)
 movie.scrape.nomatchfound=No suitable movie found during search 
+movie.scrape.toosimilar=Movie titles are too similar - can't decide which to use 
+movie.scrape.toolowscore=Matching score was too low (<0.75) so we are not taking this result
 movie.remove=Remove selected movie(s)
 movie.rename=Rename/cleanup selected movie(s)
 movie.updatemediainfo=Update media information of selected movie(s)
